test: add recursive program to e2e testing

--- a/tests/artifacts/html/on-chain-state-mgmt-zkapp-ui.html
+++ b/tests/artifacts/html/on-chain-state-mgmt-zkapp-ui.html
@@ -25,6 +25,10 @@
     </div>
     <hr />
     <div>
+      <h4>zkProgram Management</h4>
+      <div>
+        <button type="button" id="compileButton">Compile ZkProgram</button>
+      </div>
       <h4>zkApp Management</h4>
       <div>
         <button type="button" id="deployButton">Deploy zkApp</button>
